src/nl/peterbjornx/phll/parse/HllParser.java
/* HllParser.java */
/* Generated By:JavaCC: Do not edit this line. HllParser.java */
package nl.peterbjornx.phll.parse;

import nl.peterbjornx.phll.lang.*;
import nl.peterbjornx.phll.ast.*;
import nl.peterbjornx.phll.rrf.*;
import nl.peterbjornx.phll.symbol.*;
import nl.peterbjornx.phll.type.*;
import nl.peterbjornx.phll.symbol.builtin.*;

import java.util.*;

public class HllParser implements HllParserConstants {
    public static SymbolStore store;
    public static void main(String args[]) throws ParseException
    {
        HllParser parser = new HllParser(System.in);
        parser.store = new SymbolStore();
        IntegerOperators.setup(parser.store);

        long time = System.currentTimeMillis();
            parser.source_unit();
            System.out.println("took: "+ (System.currentTimeMillis() - time) );
    }

  final public Type base_type() throws ParseException {
    if (jj_2_1(4)) {
      jj_consume_token(UINT32);
{if ("" != null) return new NumericType(32, false);}
    } else if (jj_2_2(4)) {
      jj_consume_token(SINT32);
{if ("" != null) return new NumericType(32, true);}
    } else if (jj_2_3(4)) {
      jj_consume_token(UINT16);
{if ("" != null) return new NumericType(16, false);}
    } else if (jj_2_4(4)) {
      jj_consume_token(SINT16);
{if ("" != null) return new NumericType(16, true);}
    } else if (jj_2_5(4)) {
      jj_consume_token(UINT8);
{if ("" != null) return new NumericType(8, false);}
    } else if (jj_2_6(4)) {
      jj_consume_token(SINT8);
{if ("" != null) return new NumericType(8, true);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public List<Expression> par_list() throws ParseException {List<Expression> list = new LinkedList<Expression>();
    Expression v, v2;
    v = expr();
    label_1:
    while (true) {
      if (jj_2_7(4)) {
        ;
      } else {
        break label_1;
      }
      jj_consume_token(COMMA);
      v2 = expr();
list.add(v2);
    }
list.add(0,v);
        {if ("" != null) return list;}
    throw new Error("Missing return statement in function");
  }

  final public Expression prim_expr() throws ParseException {Expression val;
    List<Expression> parlist;
    String ex;
    Token t2,t;
    if (jj_2_8(4)) {
      t = jj_consume_token(NUMBER);
{if ("" != null) return new NumericExpression(t.toString());}
    } else if (jj_2_9(4)) {
      t = jj_consume_token(NAME);
{if ("" != null) return new SymbolReferenceExpression(store, t.toString());}
    } else if (jj_2_10(4)) {
      jj_consume_token(LPAR);
      val = expr();
      jj_consume_token(RPAR);
{if ("" != null) return val;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Expression postfix_expr() throws ParseException {Expression l, r;
    List<Expression> p;
    l = prim_expr();
    label_2:
    while (true) {
      if (jj_2_11(4)) {
        ;
      } else {
        break label_2;
      }
      if (jj_2_12(4)) {
        jj_consume_token(INC);
l = new UnaryExpression(store, Operator.POSTINC, l);
      } else if (jj_2_13(4)) {
        jj_consume_token(DEC);
l = new UnaryExpression(store, Operator.POSTDEC, l);
      } else if (jj_2_14(4)) {
        jj_consume_token(LSQB);
        r = expr();
        jj_consume_token(RSQB);
l = new InfixExpression(store, Operator.INDEX, l, r);
      } else if (jj_2_15(4)) {
        jj_consume_token(LPAR);
        jj_consume_token(RPAR);
l = new FunctionCallExpression(l, new LinkedList<Expression>());
      } else if (jj_2_16(4)) {
        jj_consume_token(LPAR);
        p = par_list();
        jj_consume_token(RPAR);
l = new FunctionCallExpression(l, p);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return l;}
    throw new Error("Missing return statement in function");
  }

  final public Operator unary_op() throws ParseException {
    if (jj_2_17(4)) {
      jj_consume_token(MINUS);
{if ("" != null) return Operator.NEGATE;}
    } else if (jj_2_18(4)) {
      jj_consume_token(NOT);
{if ("" != null) return Operator.NOT;}
    } else if (jj_2_19(4)) {
      jj_consume_token(INV);
{if ("" != null) return Operator.INV;}
    } else if (jj_2_20(4)) {
      jj_consume_token(AND);
{if ("" != null) return Operator.ADDR_OF;}
    } else if (jj_2_21(4)) {
      jj_consume_token(TIMES);
{if ("" != null) return Operator.DEREF;}
    } else if (jj_2_22(4)) {
      jj_consume_token(PLUS);
{if ("" != null) return Operator.NOOP;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Expression unary_expr() throws ParseException {Expression val;
    Operator   op;
    if (jj_2_23(4)) {
      op = unary_op();
      val = cast_expr();
{if ("" != null) return new UnaryExpression(store, op, val);}
    } else if (jj_2_24(4)) {
      jj_consume_token(INC);
      val = unary_expr();
{if ("" != null) return new UnaryExpression(store, Operator.PREINC, val);}
    } else if (jj_2_25(4)) {
      jj_consume_token(DEC);
      val = unary_expr();
{if ("" != null) return new UnaryExpression(store, Operator.PREDEC, val);}
    } else if (jj_2_26(4)) {
      val = postfix_expr();
{if ("" != null) return val;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Expression cast_expr() throws ParseException {Expression l;
    //TODO: Casts
        l = unary_expr();
{if ("" != null) return l;}
    throw new Error("Missing return statement in function");
  }

  final public Expression mult_expr() throws ParseException {Expression l,r;
    l = unary_expr();
    label_3:
    while (true) {
      if (jj_2_27(4)) {
        ;
      } else {
        break label_3;
      }
      if (jj_2_28(4)) {
        jj_consume_token(TIMES);
        r = unary_expr();
l = new InfixExpression(store, Operator.MUL, l, r);
      } else if (jj_2_29(4)) {
        jj_consume_token(DIVIDE);
        r = unary_expr();
l = new InfixExpression(store, Operator.DIV, l, r);
      } else if (jj_2_30(4)) {
        jj_consume_token(MODULUS);
        r = unary_expr();
l = new InfixExpression(store, Operator.MOD, l, r);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return l;}
    throw new Error("Missing return statement in function");
  }

  final public Expression add_expr() throws ParseException {Expression l, r;
    l = mult_expr();
    label_4:
    while (true) {
      if (jj_2_31(4)) {
        ;
      } else {
        break label_4;
      }
      if (jj_2_32(4)) {
        jj_consume_token(PLUS);
        r = mult_expr();
l = new InfixExpression(store, Operator.SUM, l, r);
      } else if (jj_2_33(4)) {
        jj_consume_token(MINUS);
        r = mult_expr();
l = new InfixExpression(store, Operator.SUB, l, r);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return l;}
    throw new Error("Missing return statement in function");
  }

  final public Expression shift_expr() throws ParseException {Expression l, r;
    l = add_expr();
    label_5:
    while (true) {
      if (jj_2_34(4)) {
        ;
      } else {
        break label_5;
      }
      if (jj_2_35(4)) {
        jj_consume_token(LSH);
        r = add_expr();
l = new InfixExpression(store, Operator.SHIFT_L, l, r);
      } else if (jj_2_36(4)) {
        jj_consume_token(RSH);
        r = add_expr();
l = new InfixExpression(store, Operator.SHIFT_R, l, r);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return l;}
    throw new Error("Missing return statement in function");
  }

  final public Expression rel_expr() throws ParseException {Expression l, r;
    l = shift_expr();
    label_6:
    while (true) {
      if (jj_2_37(4)) {
        ;
      } else {
        break label_6;
      }
      if (jj_2_38(4)) {
        jj_consume_token(GT);
        r = shift_expr();
l = new InfixExpression(store, Operator.GREATER, l, r);
      } else if (jj_2_39(4)) {
        jj_consume_token(LT);
        r = shift_expr();
l = new InfixExpression(store, Operator.LESS, l, r);
      } else if (jj_2_40(4)) {
        jj_consume_token(GEQ);
        r = shift_expr();
l = new InfixExpression(store, Operator.GREATER_EQ, l, r);
      } else if (jj_2_41(4)) {
        jj_consume_token(LEQ);
        r = shift_expr();
l = new InfixExpression(store, Operator.LESS_EQ, l, r);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return l;}
    throw new Error("Missing return statement in function");
  }

  final public Expression eq_expr() throws ParseException {Expression l, r;
    l = rel_expr();
    label_7:
    while (true) {
      if (jj_2_42(4)) {
        ;
      } else {
        break label_7;
      }
      if (jj_2_43(4)) {
        jj_consume_token(EQ);
        r = rel_expr();
l = new InfixExpression(store, Operator.EQUALS, l, r);
      } else if (jj_2_44(4)) {
        jj_consume_token(NEQ);
        r = rel_expr();
l = new InfixExpression(store, Operator.NOT_EQ, l, r);
      } else {
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
{if ("" != null) return l;}
    throw new Error("Missing return statement in function");
  }

  final public Expression and_expr() throws ParseException {Expression l, r;
    l = eq_expr();
    label_8:
    while (true) {
      if (jj_2_45(4)) {
        ;
      } else {
        break label_8;
      }
      jj_consume_token(AND);
      r = eq_expr();
l = new InfixExpression(store, Operator.AND, l, r);
    }
{if ("" != null) return l;}
    throw new Error("Missing return statement in function");
  }

  final public Expression xor_expr() throws ParseException {Expression l, r;
    l = and_expr();
    label_9:
    while (true) {
      if (jj_2_46(4)) {
        ;
      } else {
        break label_9;
      }
      jj_consume_token(XOR);
      r = and_expr();
l = new InfixExpression(store, Operator.XOR, l, r);
    }
{if ("" != null) return l;}
    throw new Error("Missing return statement in function");
  }

  final public Expression or_expr() throws ParseException {Expression l, r;
    l = xor_expr();
    label_10:
    while (true) {
      if (jj_2_47(4)) {
        ;
      } else {
        break label_10;
      }
      jj_consume_token(OR);
      r = xor_expr();
l = new InfixExpression(store, Operator.OR, l, r);
    }
{if ("" != null) return l;}
    throw new Error("Missing return statement in function");
  }

  final public Expression scand_expr() throws ParseException {Expression l, r;
    l = or_expr();
    label_11:
    while (true) {
      if (jj_2_48(4)) {
        ;
      } else {
        break label_11;
      }
      jj_consume_token(ANL);
      r = or_expr();
l = new InfixExpression(store, Operator.AND_SC, l, r);
    }
{if ("" != null) return l;}
    throw new Error("Missing return statement in function");
  }

  final public Expression scor_expr() throws ParseException {Expression l, r;
    l = scand_expr();
    label_12:
    while (true) {
      if (jj_2_49(4)) {
        ;
      } else {
        break label_12;
      }
      jj_consume_token(ORL);
      r = scand_expr();
l = new InfixExpression(store, Operator.OR_SC, l, r);
    }
{if ("" != null) return l;}
    throw new Error("Missing return statement in function");
  }

  final public Expression tern_expr() throws ParseException {Expression c, t, f;
    c = scor_expr();
    if (jj_2_50(4)) {
      jj_consume_token(TERN);
      t = expr();
      jj_consume_token(COLON);
      f = tern_expr();
c = new TernaryExpression(c, t, f);
    } else {
      ;
    }
{if ("" != null) return c;}
    throw new Error("Missing return statement in function");
  }

  final public Operator assign_op() throws ParseException {
    if (jj_2_51(4)) {
      jj_consume_token(ASSIGN);
{if ("" != null) return Operator.ASSIGN;}
    } else if (jj_2_52(4)) {
      jj_consume_token(MUL_ASSIGN);
{if ("" != null) return Operator.MUL_ASSIGN;}
    } else if (jj_2_53(4)) {
      jj_consume_token(DIV_ASSIGN);
{if ("" != null) return Operator.DIV_ASSIGN;}
    } else if (jj_2_54(4)) {
      jj_consume_token(ADD_ASSIGN);
{if ("" != null) return Operator.ADD_ASSIGN;}
    } else if (jj_2_55(4)) {
      jj_consume_token(SUB_ASSIGN);
{if ("" != null) return Operator.SUB_ASSIGN;}
    } else if (jj_2_56(4)) {
      jj_consume_token(MOD_ASSIGN);
{if ("" != null) return Operator.MOD_ASSIGN;}
    } else if (jj_2_57(4)) {
      jj_consume_token(SHL_ASSIGN);
{if ("" != null) return Operator.SHL_ASSIGN;}
    } else if (jj_2_58(4)) {
      jj_consume_token(SHR_ASSIGN);
{if ("" != null) return Operator.SHR_ASSIGN;}
    } else if (jj_2_59(4)) {
      jj_consume_token(AND_ASSIGN);
{if ("" != null) return Operator.AND_ASSIGN;}
    } else if (jj_2_60(4)) {
      jj_consume_token(OR_ASSIGN);
{if ("" != null) return Operator.OR_ASSIGN;}
    } else if (jj_2_61(4)) {
      jj_consume_token(XOR_ASSIGN);
{if ("" != null) return Operator.XOR_ASSIGN;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Expression assign_expr() throws ParseException {Expression l, r;
    Operator op;
    if (jj_2_62(4)) {
      l = unary_expr();
      op = assign_op();
      r = assign_expr();
{if ("" != null) return new InfixExpression(store, op, l, r);}
    } else if (jj_2_63(4)) {
      l = tern_expr();
{if ("" != null) return l;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Expression const_expr() throws ParseException {Expression e;
    e = tern_expr();
{if ("" != null) return e;}
    throw new Error("Missing return statement in function");
  }

  final public Expression expr() throws ParseException {Expression v;
    v = assign_expr();
{if ("" != null) return v;}
    throw new Error("Missing return statement in function");
  }

  final public List<Statement> stat_list() throws ParseException {List<Statement> list = new LinkedList<Statement>();
    Statement s;
    label_13:
    while (true) {
      if (jj_2_64(4)) {
        ;
      } else {
        break label_13;
      }
      s = stat();
list.add(s);
    }
{if ("" != null) return list;}
    throw new Error("Missing return statement in function");
  }

  final public Statement prim_stat() throws ParseException {Statement  s, s2;
    Expression e;
    List<Statement> list;
    if (jj_2_65(4)) {
      jj_consume_token(LBRAC);
      list = stat_list();
      jj_consume_token(RBRAC);
{if ("" != null) return new CompoundStatement(list);}
    } else if (jj_2_66(4)) {
      e = expr();
      jj_consume_token(SEMIC);
{if ("" != null) return new ExpressionStatement(e);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public Statement stat() throws ParseException {Statement s;
    s = prim_stat();
{if ("" != null) return s;}
    throw new Error("Missing return statement in function");
  }

  final public Type type_spec() throws ParseException {Type rv;
    if (jj_2_67(4)) {
      rv = base_type();
{if ("" != null) return rv;}
    } else if (jj_2_68(4)) {
      jj_consume_token(TIMES);
      rv = type_spec();
{if ("" != null) return new PointerType(rv);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public VariableSymbol par_single() throws ParseException {Type t;
    Token n;
    t = type_spec();
    n = jj_consume_token(NAME);
{if ("" != null) return new VariableSymbol(n.toString(),t);}
    throw new Error("Missing return statement in function");
  }

  final public List<VariableSymbol> par_decl() throws ParseException {List<VariableSymbol> lv = new LinkedList<VariableSymbol>();
    VariableSymbol vs, v2;
    v2 = par_single();
    label_14:
    while (true) {
      if (jj_2_69(4)) {
        ;
      } else {
        break label_14;
      }
      jj_consume_token(COMMA);
      vs = par_single();
lv.add(vs);
    }
lv.add(0,v2);
        {if ("" != null) return lv;}
    throw new Error("Missing return statement in function");
  }

  final public List<VariableSymbol> var_block() throws ParseException {List<VariableSymbol> lv = new LinkedList<VariableSymbol>();
    List<VariableSymbol> vs;
    label_15:
    while (true) {
      if (jj_2_70(4)) {
        ;
      } else {
        break label_15;
      }
      vs = var_decl();
      jj_consume_token(SEMIC);
lv.addAll(vs);
    }
{if ("" != null) return lv;}
    throw new Error("Missing return statement in function");
  }

  final public FunctionImplementation func_impl() throws ParseException {Type t;
    Token n;
    FunctionImplementation fi = new FunctionImplementation(store);
    List<VariableSymbol> ps,vd;
    List<Statement> ls;
    store = fi.getLocalStore();
    t = type_spec();
    n = jj_consume_token(NAME);
    if (jj_2_71(4)) {
      jj_consume_token(LPAR);
      jj_consume_token(RPAR);
ps = new LinkedList<VariableSymbol>();
    } else if (jj_2_72(4)) {
      jj_consume_token(LPAR);
      ps = par_decl();
      jj_consume_token(RPAR);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(LBRAC);
    vd = var_block();
for ( VariableSymbol s : ps )
            store.addSymbol(s);
        for ( VariableSymbol s : vd )
            store.addSymbol(s);
    ls = stat_list();
    jj_consume_token(RBRAC);
fi.setStatementList(ls);
        fi.setName(n.toString());
        fi.setType(t);
        fi.setParameterList(ps);
        store = store.getParent();
        {if ("" != null) return fi;}
    throw new Error("Missing return statement in function");
  }
